--- a/Coldwarzombies.new/App.xaml
+++ b/Coldwarzombies.new/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="ColdWarZombieTrainer.App"
+﻿<Application x:Class="Zombies.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:ColdWarZombieTrainer"
+             xmlns:local="clr-namespace:Zombies"
              StartupUri="MainWindow.xaml">
         <Application.Resources>
             <!--<ResourceDictionary>
